--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 {
   background-color:#ffff00;
 }
-    </style?>
+    </style>
     <meta charset="utf-8" />
     <meta name="keywords" content="Coding" />
   <meta name="google" content="notranslate"/>
