--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Welcome To Period 5 Foundations of Programming</title>
+    <title> Joshua's Homepage</title>
     <style>
+      body{
+        background-color:LightBlue;
       h1{
         text-allign:center;
       }
     </style>
     
     <body>
-      <h1>Hello And Welcome to This Years CGHS Open House</h1>
+      <h1>Hello And Welcome to my homepage</h1>
+<p> i like to play video games and love to listen to music. i dont sleep a lot so im always tired and i hope t0 do good this year</p>
+      <h2> this is my favorite website</h2>
+      <iframe src="https://www.google.com/search?q=play+snake"> click this</iframe>
