--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <html>
   <head>
     <title> Joshua's Homepage</title>
-    <style>
-      body{
-        background-color:LightBlue;
-      }
-      h1{
-        text-allign:center;
-      }
-    </style>
-    
+  </head>
     <body>
       <h1>Hello And Welcome to my homepage</h1>
 <p> i like to play video games and love to listen to music. i dont sleep a lot so im always tired and i hope t0 do good this year</p>
