--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> Joshua's Homepage</title>
+    <link rel="stylesheet" text="text/css" href="style.css">
   </head>
     <body>
       <h1>Hello And Welcome to my homepage</h1>
